fixed proficiencies list spacing

--- a/src/style/_input.scss
+++ b/src/style/_input.scss
@@ -100,7 +100,7 @@
   }
 
   > input[type="number"] {
-    width: 3em;
+    width: calc(2 * var(--font-size-big));
     &::-webkit-outer-spin-button,
     &::-webkit-inner-spin-button {
       -webkit-appearance: none;
